First commited as before_70701_rev1