@@ -55,8 +55,7 @@ import org.eclipse.jgit.util.TemporaryBuffer;
  *
  * @since 3.3
  */
-public class TemporaryBufferEntity extends AbstractHttpEntity
-		implements AutoCloseable {
+public class TemporaryBufferEntity extends AbstractHttpEntity {
 	private TemporaryBuffer buffer;
 
 	private Integer contentLength;
@@ -105,18 +104,6 @@ public class TemporaryBufferEntity extends AbstractHttpEntity
 	 * @param contentLength
 	 */
 	public void setContentLength(int contentLength) {
-		this.contentLength = Integer.valueOf(contentLength);
-	}
-
-	/**
-	 * Close destroys the associated buffer used to buffer the entity
-	 *
-	 * @since 4.5
-	 */
-	@Override
-	public void close() {
-		if (buffer != null) {
-			buffer.destroy();
-		}
+		this.contentLength = new Integer(contentLength);
 	}
 }
